--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  mobx:
+  flutter_mobx:
   flutter:
     sdk: flutter
 
@@ -36,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.1.10
+  mobx_codegen: ^2.0.6
   flutter_test:
     sdk: flutter
 
